--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+    <meta name="google-site-verification" content="i2nDKIOsPBkSSCaddVA6uquVMjOuMgTa4JiWDIdcm2U" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>BIA HOI カタコト - 狸小路9丁目</title>
