--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-  <title>札幌・狸小路のベトナムビアホイ | カタコトで楽しむクラフトビール</title>
   
-  <meta name="description" content="札幌・狸小路の隅にあるビール屋台。現地の「BIA HOI」な雰囲気の中で、厳選したクラフトビールとベトナム屋台料理を楽しめます。">
+  <title>BIA HOI KATAKOTO | 札幌・狸小路のベトナムビアホイ & Craft Beer Sapporo</title>
   
-  <meta name="keywords" content="札幌,ベトナム,ビアホイ,クラフトビール,狸小路,カタコト,BIA HOI">
+  <meta name="description" content="札幌・狸小路の隅にあるビール屋台。現地の「BIA HOI」な雰囲気の中で、厳選したクラフトビールとベトナム屋台料理を楽しめます。We offer delicious Craft Beer and Vietnamese street food in Sapporo Tanukikoji.">
+  
+  <meta name="keywords" content="札幌,ベトナム,ビアホイ,クラフトビール,狸小路,カタコト,BIA HOI,Sapporo,Craft Beer,Vietnamese Food">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta name="google-site-verification" content="vP-AbCdeFgHiJkLmNoPqRsTuVwXyZ123456789"" />
+  <meta name="google-site-verification" content="vP-AbCdeFgHiJkLmNoPqRsTuVwXyZ123456789" />
 
   <link rel="stylesheet" href="style.css">
     <meta name="google-site-verification" content="i2nDKIOsPBkSSCaddVA6uquVMjOuMgTa4JiWDIdcm2U" />
