--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8">
   
-  <title>BIA HOI KATAKOTO | 札幌・狸小路のベトナムビアホイ & Craft Beer Sapporo</title>
+  <title>BIA HOI KATAKOTO | 札幌・狸小路のベトナムビアホイ & Craft Beer Sapporo Culture</title>
   
-  <meta name="description" content="札幌・狸小路の隅にあるビール屋台。現地の「BIA HOI」な雰囲気の中で、厳選したクラフトビールとベトナム屋台料理を楽しめます。We offer delicious Craft Beer and Vietnamese street food in Sapporo Tanukikoji.">
+  <meta name="description" content="札幌・狸小路の隅にあるビール屋台。現地の「BIA HOI」な雰囲気の中で、厳選したクラフトビールとベトナム屋台料理を楽しめます。We offer nice local Craft Beer and Vietnamese and Sapporo street food in Sapporo Tanukikoji.">
   
   <meta name="keywords" content="札幌,ベトナム,ビアホイ,クラフトビール,狸小路,カタコト,BIA HOI,Sapporo,Craft Beer,Vietnamese Food">
 
