--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
   // ---------------------------
   // 設定（ここだけ最初に触ればOK）
   // ---------------------------
-  const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwSq5s0moxIe5WGrzPm-pDvYAliJja-0PdyK4vb9fPaRx34DY3CpMt9jRtEqrzLkrA6/exec;
+  const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbzCiRzRJ_ZvHgpVIme-Zjmfea7qpqtkMBBP4PKrSiQ9Mqf8GsSAB2CZDCsPOPssvfNz/exec';
 
   // 1) リポジトリにトークンを書きたくない場合：空のまま（初回に入力→localStorage保存）
   // 2) どうしても固定したい場合：ここにトークン文字列を入れる（ただしGitHubに公開されるので「秘密」にはなりません）
