--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 
   // 1) リポジトリにトークンを書きたくない場合：空のまま（初回に入力→localStorage保存）
   // 2) どうしても固定したい場合：ここにトークン文字列を入れる（ただしGitHubに公開されるので「秘密」にはなりません）
-  const GAS_TOKEN_HARDCODED = '';
+  const GAS_TOKEN = 'KATAKOTO_2026_menu_v1_9c2Fh7pLxQ4mN8sT';
 
   // 画像（同じフォルダに置く）
   const IMG_STAFF_ICON = 'tentyo.png';
